Add proxy settings to internal HTTP client